Import de função sys, para criar metodos de saida do programa

--- a/PUCRS_Fase_2_Steam_games.ipynb
+++ b/PUCRS_Fase_2_Steam_games.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVg0kQd3GXV/AL43aBdoPQ",
+      "authorship_tag": "ABX9TyOnEZVMIqUEf+8grgCNPpYI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "import sys\n",
         "import pandas as pd\n",
         "\n",
         "#seleção de arquivo\n",
@@ -49,8 +49,8 @@
         "\n",
         "#finalização forçada\n",
         "if str.lower(f) == 'sair':\n",
-        "  SystemExit\n",
         "  print('Saindo...')\n",
+        "  sys.exit()\n",
         "else:\n",
         "  tabela = pd.read_csv(f, sep=\",\")\n",
         "  if tabela.empty:\n",
@@ -58,7 +58,8 @@
         "\n",
         "match input('Digite o número da questão: '):\n",
         "  case '0':\n",
-        "    SystemExit\n",
+        "    print('Saindo...')\n",
+        "    sys.exit()\n",
         "  case '1':\n",
         "    try:\n",
         "      questao_1 = tabela[['Name', 'Metacritic score', 'Release date']]\n",
@@ -74,20 +75,29 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 128
         },
         "id": "MRPFIYj9ovvk",
-        "outputId": "348e54dd-0e20-4b3a-a149-4f21fc966afa"
+        "outputId": "45327053-758a-41a6-d8fa-998a9df61985"
       },
-      "execution_count": 49,
+      "execution_count": 52,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Digite o nome do arquivo: sair\n",
-            "Saindo...\n",
-            "Digite o número da questão: sair\n"
+            "Digite o nome do arquivo: SAir\n",
+            "Saindo...\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "SystemExit",
+          "evalue": "",
+          "traceback": [
+            "An exception has occurred, use %tb to see the full traceback.\n",
+            "\u001b[0;31mSystemExit\u001b[0m\n"
           ]
         }
       ]
