Inicio da questão 2, identificação de rpg em generos

--- a/PUCRS_Fase_2_Steam_games.ipynb
+++ b/PUCRS_Fase_2_Steam_games.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnEZVMIqUEf+8grgCNPpYI",
+      "authorship_tag": "ABX9TyNW4ztNFiDjn/S0jNKcZD4b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(np.version)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ehIGo3-Cxfu7",
+        "outputId": "ddbe69b9-3290-4a3e-a91d-3790fb292e5d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<module 'numpy.version' from '/usr/local/lib/python3.10/dist-packages/numpy/version.py'>\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "*TRABALHO DE PROGRAMAÇÃO PARA DADOS*\n",
@@ -43,6 +66,8 @@
       "source": [
         "import sys\n",
         "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "\n",
         "#seleção de arquivo\n",
         "f = input('Digite o nome do arquivo: ')\n",
@@ -50,7 +75,7 @@
         "#finalização forçada\n",
         "if str.lower(f) == 'sair':\n",
         "  print('Saindo...')\n",
-        "  sys.exit()\n",
+        "  sys.exit('O sistema foi finalizado pelo usuario, inicie novamente para outro uso.')\n",
         "else:\n",
         "  tabela = pd.read_csv(f, sep=\",\")\n",
         "  if tabela.empty:\n",
@@ -59,48 +84,210 @@
         "match input('Digite o número da questão: '):\n",
         "  case '0':\n",
         "    print('Saindo...')\n",
-        "    sys.exit()\n",
-        "  case '1':\n",
+        "    sys.exit('O sistema foi finalizado pelo usuario, inicie novamente para outro uso.')\n",
+        "  case '1': #questão 1\n",
         "    try:\n",
+        "\n",
         "      questao_1 = tabela[['Name', 'Metacritic score', 'Release date']]\n",
+        "\n",
         "      if questao_1['Release date'].duplicated().any():\n",
         "        questao_1_order = questao_1.sort_values(by= 'Release date' and 'Metacritic score', ascending=True)# Mostra os 10 maiores\n",
         "        display(questao_1_order.tail(n=10))                                                               #false mostrava os 10 menores\n",
+        "\n",
         "      else:\n",
+        "\n",
         "        questao_1_10 = questao_1.copy()\n",
-        "        top_10_maiores_notas = questao_1_10.nlargest(10, 'Metacritic score').sort_values(by='Metacritic score', ascending=False) # mostra os maiores por ter poucos dados\n",
-        "        display(top_10_maiores_notas.tail(n=10))\n",
+        "        top_10_notas = questao_1_10.nlargest(10, 'Metacritic score').sort_values(by='Metacritic score', ascending=False) # mostra os maiores por ter poucos dados\n",
+        "        display(top_10_notas.tail(n=10))\n",
+        "\n",
         "    except FileNotFoundError:\n",
-        "      print('Digite um nome válido')\n"
+        "      print('Digite um nome válido')\n",
+        "\n",
+        "  case '2':\n",
+        "        #try:\n",
+        "          mask = tabela['Genres'].str.contains('RPG', case=False, na=False)\n",
+        "          display(mask[:23])\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 128
+          "height": 841
         },
         "id": "MRPFIYj9ovvk",
-        "outputId": "45327053-758a-41a6-d8fa-998a9df61985"
+        "outputId": "6156d013-50af-4a2e-e404-6eebbf850611"
       },
-      "execution_count": 52,
+      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Digite o nome do arquivo: SAir\n",
-            "Saindo...\n"
+            "Digite o nome do arquivo: steam_games.csv\n",
+            "Digite o número da questão: 2\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "SystemExit",
-          "evalue": "",
-          "traceback": [
-            "An exception has occurred, use %tb to see the full traceback.\n",
-            "\u001b[0;31mSystemExit\u001b[0m\n"
-          ]
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "0     False\n",
+              "1     False\n",
+              "2     False\n",
+              "3     False\n",
+              "4     False\n",
+              "5      True\n",
+              "6     False\n",
+              "7     False\n",
+              "8      True\n",
+              "9     False\n",
+              "10     True\n",
+              "11    False\n",
+              "12    False\n",
+              "13    False\n",
+              "14     True\n",
+              "15    False\n",
+              "16    False\n",
+              "17     True\n",
+              "18    False\n",
+              "19    False\n",
+              "20    False\n",
+              "21    False\n",
+              "22    False\n",
+              "Name: Genres, dtype: bool"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Genres</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> bool</label>"
+            ]
+          },
+          "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "COU3_vdJsbfi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
