Questão 4 respondida, contagem de aumento de jogos para linux

--- a/PUCRS_Fase_2_Steam_games.ipynb
+++ b/PUCRS_Fase_2_Steam_games.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPC5sXZfNLLy8srPmBKVSRH",
+      "authorship_tag": "ABX9TyNqqaup5rpPXMs+WZjA1blL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,29 +24,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/FelipePinheiro964/PUCRS---Fase-2---Steam-Games/blob/main/PUCRS_Fase_2_Steam_games.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(np.version)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ehIGo3-Cxfu7",
-        "outputId": "ddbe69b9-3290-4a3e-a91d-3790fb292e5d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<module 'numpy.version' from '/usr/local/lib/python3.10/dist-packages/numpy/version.py'>\n"
-          ]
-        }
       ]
     },
     {
@@ -143,16 +120,16 @@
         "  case '3':\n",
         "\n",
         "## 5 empresas com mais publi\n",
-        "    tabela_copy2 = tabela.copy()\n",
-        "    empresas = tabela_copy2['Publishers'].value_counts()\n",
+        "    tabela_copy = tabela.copy()\n",
+        "    empresas = tabela_copy['Publishers'].value_counts()\n",
         "    top5_empresas = empresas.head(5)\n",
         "\n",
         "    top5_empresas_index = empresas.head(5).index\n",
         "\n",
-        "    top5_empresas_pagos = tabela_copy2[\n",
+        "    top5_empresas_pagos = tabela_copy[\n",
         "\n",
-        "        (tabela_copy2['Publishers'].isin(top5_empresas_index)) &\n",
-        "        (tabela_copy2['Price'] > 0)\n",
+        "        (tabela_copy['Publishers'].isin(top5_empresas_index)) &\n",
+        "        (tabela_copy['Price'] > 0)\n",
         "\n",
         "    ]\n",
         "\n",
@@ -163,254 +140,26 @@
         "\n",
         "    display(top5_empresas)\n",
         "    display(media_positivas)\n",
-        "    display(mediana_positivas)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 818
-        },
-        "id": "MRPFIYj9ovvk",
-        "outputId": "8f03d67f-5d2c-4880-b2a1-2377fa01673b"
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Digite o nome do arquivo: steam_games.csv\n",
-            "Digite o número da questão: 3\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Publishers\n",
-              "Big Fish Games    465\n",
-              "8floor            240\n",
-              "SEGA              169\n",
-              "Strategy First    163\n",
-              "Laush Studio      157\n",
-              "Name: count, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Publishers</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Big Fish Games</th>\n",
-              "      <td>465</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8floor</th>\n",
-              "      <td>240</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>SEGA</th>\n",
-              "      <td>169</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Strategy First</th>\n",
-              "      <td>163</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Laush Studio</th>\n",
-              "      <td>157</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Publishers\n",
-              "8floor               4.460251\n",
-              "Big Fish Games       7.363431\n",
-              "Laush Studio        19.777070\n",
-              "SEGA              4422.688742\n",
-              "Strategy First     276.450617\n",
-              "Name: Positive, dtype: float64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Positive</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Publishers</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>8floor</th>\n",
-              "      <td>4.460251</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Big Fish Games</th>\n",
-              "      <td>7.363431</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Laush Studio</th>\n",
-              "      <td>19.777070</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>SEGA</th>\n",
-              "      <td>4422.688742</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Strategy First</th>\n",
-              "      <td>276.450617</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> float64</label>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Publishers\n",
-              "8floor              3.0\n",
-              "Big Fish Games      5.0\n",
-              "Laush Studio       12.0\n",
-              "SEGA              932.0\n",
-              "Strategy First     23.0\n",
-              "Name: Positive, dtype: float64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Positive</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Publishers</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>8floor</th>\n",
-              "      <td>3.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Big Fish Games</th>\n",
-              "      <td>5.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Laush Studio</th>\n",
-              "      <td>12.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>SEGA</th>\n",
-              "      <td>932.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Strategy First</th>\n",
-              "      <td>23.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> float64</label>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
+        "    display(mediana_positivas)\n",
         "\n",
-        "# Supondo que você já tenha lido o arquivo CSV em um DataFrame chamado 'tabela'\n",
-        "# tabela = pd.read_csv('seu_arquivo.csv', sep=\",\")\n",
+        "  case '4':\n",
         "\n",
-        "# Exemplo de DataFrame\n",
-        "data = {\n",
-        "    'Name': ['Game A', 'Game B', 'Game C', 'Game D', 'Game E', 'Game F', 'Game G'],\n",
-        "    'Publisher': ['Empresa X', 'Empresa Y', 'Empresa X', 'Empresa Z', 'Empresa Y', 'Empresa X', 'Empresa Z'],\n",
-        "    'Positive Ratings': [100, 200, 150, 300, 250, 400, 350]\n",
-        "}\n",
+        "    tabela_copy = tabela.copy()\n",
         "\n",
-        "tabela = pd.DataFrame(data)\n",
+        "    tabela_copy['Release date'] = pd.to_datetime(tabela_copy['Release date'], format='mixed', errors='coerce')\n",
         "\n",
-        "# Contando o número de publicações por empresa\n",
-        "publicacoes_por_empresa = tabela['Publisher'].value_counts()\n",
         "\n",
-        "# Selecionando as 5 empresas que mais publicaram\n",
-        "top_5_empresas = publicacoes_por_empresa.head(5).index\n",
+        "    jogos_2018_2022 = tabela_copy[(tabela_copy['Release date'].dt.year >= 2018) & (tabela_copy['Release date'].dt.year <= 2022)]\n",
+        "    contagem_linux = jogos_2018_2022[jogos_2018_2022['Linux']].groupby(jogos_2018_2022['Release date'].dt.year).size()\n",
         "\n",
-        "# Calculando a média de avaliações positivas para as 5 empresas\n",
-        "media_avaliacoes = tabela[tabela['Publisher'].isin(top_5_empresas)].groupby('Publisher')['Positive Ratings'].mean()\n",
+        "    display(contagem_linux)\n",
         "\n",
-        "# Exibindo a média de avaliações positivas\n",
-        "print(media_avaliacoes)"
+        "    crescimento = contagem_linux.diff().dropna()  # Calcula a diferença ano a ano\n",
+        "    cresceu = crescimento > 0  # Verifica se a diferença é positiva\n",
+        "\n",
+        "\n",
+        "    display(crescimento)\n",
+        ""
       ],
       "metadata": {
         "id": "KPtdGRWZc2Ur"
